XWIKI-22681: Provide a relative ResourceReferenceEntityReferenceResolver
  * Continue working on tests